# analyze_data

./: Cargo.toml  README.md
src/: main.rs  mode.rs  number_stats.rs  output_csv_data.rs  output_data.rs  output_number_data.rs  output_row.rs  output_string_data.rs  string_stats.rs
src/mode/: csv.rs  group_number.rs  number.rs  string.rs
