[package]
name = "analyze_data"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cardinality-estimator = "1.0.2"
clap = { version = "4.0", features = ["derive"] }
cli-table = "0.4.7"
is-terminal = "0.4.12"
itertools = "0.13.0"
streaming-stats = "0.2.3"

[profile.profiling]
inherits = "release"
debug = true

# [dev-dependencies]
# approx = "0.5.1"
